--- a/blog.html
+++ b/blog.html
@@ -34,9 +34,9 @@
     <main>
         <section class="mid-level">
             <div class="menu">
-                <a href="">Upcoming Match</a>
+                <a href="match.html">Upcoming Match</a>
                 <a href="">All Group</a>
-                <a class="difmenu" href="">Blog</a>
+                <a class="difmenu" href="blog.html">Blog</a>
             </div>
             <div class="blogs">
                 <div class="blog">
