--- a/blog.html
+++ b/blog.html
@@ -185,6 +185,11 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="view">
+                <a href="">View All</a>
+            </div>
+        </section>
     </main>
     <footer>
         <section class="low-layer">
