--- a/match.html
+++ b/match.html
@@ -6,10 +6,131 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upcoming Matches</title>
-    <link rel="stylesheet" href="Styles/style.css">
+    <link rel="stylesheet" href="Styles/match-style.css">
+    <script src="https://kit.fontawesome.com/403ad58650.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Finlandica:ital@1&family=Open+Sans:ital,wght@1,300&family=Poppins:wght@400;500&family=Splash&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
+    <header>
+        <section class="top-level">
+            <div class="title">
+                <h1>The Greatest show on the earth</h1>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply
+                    random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000
+                    years
+                    old.</p>
+                <a href="">Watch Live <span class="icon"><i class="fa-solid fa-angle-right"></i></span></a>
+            </div>
+            <div class="player">
+                <img src="assets/Banner Image.png" alt="">
+            </div>
+        </section>
+    </header>
+    <main>
+        <section class="mid-level">
+            <div class="menu">
+                <a class="difmenu" href="match.html">Upcoming Match</a>
+                <a href="">All Group</a>
+                <a href="blog.html">Blog</a>
+            </div>
+            <div class="matches">
+                <div class="match">
+                    <div class="flag">
+                        <img src="assets/Flag.png" alt="">
+                        <p>VS</p>
+                        <img src="assets/germany Flag.png" alt="">
+                    </div>
+                    <div class="details">
+                        <h3>Germany VS France</h3>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+                <div class="match">
+                    <div class="flag">
+                        <img src="assets/Flag.png" alt="">
+                        <p>VS</p>
+                        <img src="assets/germany Flag.png" alt="">
+                    </div>
+                    <div class="details">
+                        <h3>Germany VS France</h3>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+                <div class="match">
+                    <div class="flag">
+                        <img src="assets/Flag.png" alt="">
+                        <p>VS</p>
+                        <img src="assets/germany Flag.png" alt="">
+                    </div>
+                    <div class="details">
+                        <h3>Germany VS France</h3>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+                <div class="match">
+                    <div class="flag">
+                        <img src="assets/Flag.png" alt="">
+                        <p>VS</p>
+                        <img src="assets/germany Flag.png" alt="">
+                    </div>
+                    <div class="details">
+                        <h3>Germany VS France</h3>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+                <div class="match">
+                    <div class="flag">
+                        <img src="assets/Flag.png" alt="">
+                        <p>VS</p>
+                        <img src="assets/germany Flag.png" alt="">
+                    </div>
+                    <div class="details">
+                        <h3>Germany VS France</h3>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+                <div class="match">
+                    <div class="flag">
+                        <img src="assets/Flag.png" alt="">
+                        <p>VS</p>
+                        <img src="assets/germany Flag.png" alt="">
+                    </div>
+                    <div class="details">
+                        <h3>Germany VS France</h3>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <section class="low-layer">
+            <div class="footer-title">
+                <h1>GOAL</h1>
+            </div>
+            <div class="horizontal-line">
+                <hr>
+            </div>
+            <div class="extras">
+                <p>Contact Us</p>
+                <p>Terms of Service</p>
+                <p>Privacy Policy</p>
+                <p>Privacy Settings</p>
+                <p>Goal App</p>
+                <p>Goal Live</p>
+            </div>
+            <div class="social">
+                <a href="https://www.facebook.com/GOAL"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/goalglobal/?hl=en"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://twitter.com/goal"><i class="fa-brands fa-twitter"></i></a>
+            </div>
+        </section>
+    </footer>
 
 </body>
 
