--- a/blog.html
+++ b/blog.html
@@ -6,8 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="Styles/blog-style.css">
+    <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/403ad58650.js" crossorigin="anonymous"></script>
+    <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -16,22 +19,30 @@
 </head>
 
 <body>
-    <header>
-        <section class="top-level">
-            <div class="title">
-                <h1>The Greatest show on the earth</h1>
-                <p>Contrary to popular belief, Lorem Ipsum is not simply
-                    random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000
-                    years
-                    old.</p>
-                <a href="">Watch Live <span class="icon"><i class="fa-solid fa-angle-right"></i></span></a>
-            </div>
-            <div class="player">
-                <img src="assets/Banner Image.png" alt="">
-            </div>
-        </section>
-    </header>
     <main>
+        <!-- Cover Start Here -->
+        <header>
+            <section class="top-level">
+                <div class="football">
+                    <img src="assets/football2.png" alt="">
+                </div>
+                <div class="title">
+                    <h1>The Greatest show on the earth</h1>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply
+                        random text. It has roots in a piece of classical Latin literature from 45 BC, making it over
+                        2000
+                        years
+                        old.</p>
+                    <a href="">Watch Live <span class="icon"><i class="fa-solid fa-angle-right"></i></span></a>
+                </div>
+                <div class="player">
+                    <img src="assets/marcelo.png" alt="">
+                </div>
+            </section>
+        </header>
+        <!-- Cover End Here -->
+
+        <!-- Middle Level Start Here -->
         <section class="mid-level">
             <div class="menu">
                 <a href="match.html">Upcoming Match</a>
@@ -185,12 +196,14 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="view-button">
             <div class="view">
                 <a href="">View All</a>
             </div>
         </section>
+        <!-- Middle Level End Here -->
     </main>
+    <!-- Footer Start Here -->
     <footer>
         <section class="low-layer">
             <div class="footer-title">
@@ -200,12 +213,12 @@
                 <hr>
             </div>
             <div class="extras">
-                <p>Contact Us</p>
-                <p>Terms of Service</p>
-                <p>Privacy Policy</p>
-                <p>Privacy Settings</p>
-                <p>Goal App</p>
-                <p>Goal Live</p>
+                <a href="" class="extras-name">Contact Us</a>
+                <a href="" class="extras-name">Terms of Service</a>
+                <a href="" class="extras-name">Privacy Policy</a>
+                <a href="" class="extras-name">Privacy Settings</a>
+                <a href="" class="extras-name">Goal App</a>
+                <a href="" class="extras-name">Goal Live</a>
             </div>
             <div class="social">
                 <a href="https://www.facebook.com/GOAL"><i class="fa-brands fa-facebook"></i></a>
@@ -214,7 +227,7 @@
             </div>
         </section>
     </footer>
-
+    <!-- Footer End Here -->
 </body>
 
 </html>
