--- a/blog.html
+++ b/blog.html
@@ -28,11 +28,10 @@
                 </div>
                 <div class="title">
                     <h1>The Greatest show on the earth</h1>
-                    <p>Contrary to popular belief, Lorem Ipsum is not simply
-                        random text. It has roots in a piece of classical Latin literature from 45 BC, making it over
-                        2000
-                        years
-                        old.</p>
+                    <p>The FIFA World Cup, often simply called the World Cup, is an international association football
+                        competition contested by the senior men's national teams of the members of the Fédération
+                        Internationale de Football Association (FIFA), the sport's global governing body. The
+                        championship has been awarded every four years since the inaugural tournament in 1930.</p>
                     <a href="">Watch Live <span class="icon"><i class="fa-solid fa-angle-right"></i></span></a>
                 </div>
                 <div class="player">
